# KustoBench

./: .gitignore  README.md  RESULTS.md  config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt  run_benchmark.py
benchmark/: __init__.py  clickhouse_client.py  config.py  kusto_client.py  load.py  reporter.py  runner.py  setup.py
datasets/clickbench/: dataset.yaml  schema.kql  schema.sql
datasets/clickbench/queries/: q00.kql  q00.query  q01.kql  q01.query  q02.kql  q02.query  q03.kql  q03.query  q04.kql  q04.query  q05.kql  q05.query  q06.kql  q06.query  q07.kql  q07.query  q08.kql  q08.query  q09.kql  q09.query  q10.kql  q10.query  q11.kql  q11.query  q12.kql  q12.query  q13.kql  q13.query  q14.kql  q14.query  q15.kql  q15.query  q16.kql  q16.query  q17.kql  q17.query  q18.kql  q18.query  q19.kql  q19.query  (+46 more)
envs/: adx.yaml  clickhouse-2node.yaml  clickhouse.yaml
infra/: adx.bicep  clickhouse.bicep  deploy.py
infra/scripts/: install-clickhouse.sh
kustobench/: __init__.py  __main__.py  benchmark.py  client.py  config.py  reporter.py
kustobench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
queries/: count.kql  events_over_time.kql  sample_queries.json  top_states.kql
tests/: __init__.py  test_benchmark.py  test_cli.py  test_config.py  test_load.py  test_reporter.py  test_runner.py  test_setup.py
